--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ __pycache__
 credentials.py
 .env
 creds.py
+/homework/morera_marina/homework_19/allure-reports/
+/homework/morera_marina/homework_19/allure-results/
