--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ credentials.py
 creds.py
 /homework/morera_marina/homework_19/allure-reports/
 /homework/morera_marina/homework_19/allure-results/
+/homework/morera_marina/test_api_marina/allure-reports/
+/homework/morera_marina/test_api_marina/allure-results/
+/allure-reports
